# tree-processing-snark

./: CMakeLists.txt  README.md  main.cpp
data/: DataGraph.cpp  DataGraph.hpp  Document.cpp  Document.hpp  Information.cpp  Information.hpp
